--- a/css/page.css
+++ b/css/page.css
@@ -132,6 +132,10 @@
     margin: auto;
 }
 
+.presentacion-txt h1 {
+    display: inline;
+}
+
 .bold {
     font-family: "Futura Heavy";
 }
@@ -171,6 +175,7 @@
 }
 
 #clientes {
+    display: none;
     width: 100%;
     height: 70vh;
     min-height: 670px;
